--- a/app/views/hosts/_host.html.erb
+++ b/app/views/hosts/_host.html.erb
@@ -15,8 +15,7 @@
         </h5>
       
         <p class="card-subtitle mb-2 text-muted">
-          <%= number_with_delimiter host.repositories_count %> repositories<br>
-          <%= number_with_delimiter host.issues_count %> issues<br>
+          <%= number_with_delimiter host.repositories_count %> repositories
         </p>
       </div>
       <div class="flex-shrink-0">
