--- a/app/views/repositories/_repository.html.erb
+++ b/app/views/repositories/_repository.html.erb
@@ -11,13 +11,7 @@
       
         <%# todo description %>
         <p class="card-subtitle mb-2 text-muted"><i><small>
-          Branch: <%= repository.default_branch %><br>
-          <% if repository.total_issues %>
-              Total issues: <%= number_with_delimiter repository.total_issues %><br>
-              Total issueters: <%= number_with_delimiter repository.total_issueters %><br>
-              Avg issues per issueter: <%= number_with_delimiter repository.mean_issues.round(3) %><br>
-              Development Distribution Score (<a href='https://report.opensustain.tech/chapters/development-distribution-score.html' target="_blank">DDS</a>): <%= repository.dds.round(3) %><br>
-          <% end %>
+          Total issues: <%= number_with_delimiter repository.issues_count %><br/>
           <% if repository.last_synced_at %>
               Last synced: <%= distance_of_time_in_words_to_now repository.last_synced_at %> ago
           <% end %>
