Show issue and pull request totals on homepage

--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -16,7 +16,9 @@
 
 <div class="container-sm">
   <h2 class='mb-3'>
-    Repositories indexed: <%= number_with_delimiter @hosts.sum(&:repositories_count) %>
+    Repositories indexed: <%= number_with_delimiter @hosts.sum(&:repositories_count) %> -
+    Issues counted: <%= number_with_delimiter @hosts.sum(&:issues_count) %> -
+    Pull requests counted: <%= number_with_delimiter @hosts.sum(&:pull_requests_count) %>
   </h2>
 
   <%= render @hosts %>
