--- a/app/views/hosts/_host.html.erb
+++ b/app/views/hosts/_host.html.erb
@@ -17,7 +17,8 @@
         <p class="card-subtitle mb-2 text-muted">
           <%= number_with_delimiter host.repositories_count %> repositories<br>
           <%= number_with_delimiter host.issues_count %> issues<br>
-          <%= number_with_delimiter host.pull_requests_count %> pull requests
+          <%= number_with_delimiter host.pull_requests_count %> pull requests<br>
+          <%= number_with_delimiter host.authors_count %> authors
         </p>
       </div>
       <div class="flex-shrink-0">
