--- a/app/views/owners/_owner.html.erb
+++ b/app/views/owners/_owner.html.erb
@@ -9,7 +9,7 @@
         </h5>
       
         <p class="card-subtitle mb-2 text-muted"><i><small>
-          Total issues and pull requests: <%= number_with_delimiter count %><br/>
+          Repositories: <%= number_with_delimiter count %><br/>
         </small></i></p>
       </div>
       <div class="flex-shrink-0">
