Refactor OwnersController to exclude repositories with no owner

--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -18,7 +18,7 @@
       <a class="nav-link" aria-current="page">
         Authors
         <span class="badge bg-secondary rounded-pill">
-          # TODO cache authors count onto host
+          <!-- TODO cache authors count onto host -->
         </span>
       </a>
     </li>
