--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -69,6 +69,39 @@
     </div>
   </div>
   <hr/>
+
+<div class='row'>
+    <div class='col-md-4'>
+      <h4>All Maintainers</h4>
+      <ul>
+        <% @maintainers.each do |author, count| %>
+          <li>
+            <%= link_to author, host_author_path(@host.name, author) %>
+            <% if bot?(author) %>
+              <span title='bot'>🤖</span>
+            <% end %>
+            (<%= number_with_delimiter count %>)
+          </li>
+        <% end %>
+      </ul>
+    </div>
+    <div class='col-md-4'>
+      <h4>Active Maintainers</h4>
+      <ul>
+        <% @active_maintainers.each do |author, count| %>
+          <li>
+            <%= link_to author, host_author_path(@host.name, author) %>
+            <% if bot?(author) %>
+              <span title='bot'>🤖</span>
+            <% end %>
+            (<%= number_with_delimiter count %>)
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+  <hr/>
+
   <div class='row'>
     <div class='col-md-4'>
       <h4>Top Issue Authors</h4>
@@ -99,7 +132,6 @@
       </ul>
     </div>
   </div>
-
 
   <hr>
   <div class='row'>
