Update link to Authors page in owners index.html.erb

--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -15,11 +15,12 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" aria-current="page">
+      <a class="nav-link" aria-current="page" href="<%= host_authors_path(@host) %>">
         Authors
-        <span class="badge bg-secondary rounded-pill">
-          <!-- TODO cache authors count onto host -->
-        </span>
+        
+          <!--<span class="badge bg-secondary rounded-pill">
+             TODO cache authors count onto host 
+             </span>-->
       </a>
     </li>
     <li class="nav-item">
