Update meta titles and descriptions for author and exports views

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,4 +1,5 @@
-<% @meta_title = "#{@author} issue stats | #{@host}" %>
+<% @meta_title = "#{@author} issue and pull request stats | #{@host}" %>
+<% @meta_description = "Issue and pull request stats for #{@author} on #{@host}" %>
 
 <div class="container-sm">
   <h1>
