--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "#{@host.to_s} Authors" %>
+<% @meta_description = "Issue and Pull Request Authors on #{@host}" %>
 
 <div class="container-sm">
   <h1 class='mb-4'>
