Update meta titles and descriptions for author and exports views

--- a/app/views/issues/dependabot.html.erb
+++ b/app/views/issues/dependabot.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "Dependabot pull requests" %>
+<% @meta_description = "Dependabot pull requests on #{@host}" %>
 
 <div class="container-sm">
   <h1 class='mb-3'>
