--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "#{@repository.full_name} issues and pull requests" %>
+<% @meta_description = "Issues and pull requests for #{@repository.full_name} on #{@host}" %>
 
 <div class="container-sm">
   <h1 class='mb-3'>
