--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "#{@host.to_s} Owners" %>
+<% @meta_description = "Owners of repositories with Issues and Pull Requests indexed from #{@host}" %>
 
 <div class="container-sm">
   <h1 class='mb-4'>
