--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "#{@owner} issue stats | #{@host}" %>
+<% @meta_description = "Issue and pull request stats for #{@owner} on #{@host}" %>
 
 <div class="container-sm">
   <h1>
