--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = @host.to_s %>
+<% @meta_description = "Repositories with Issues and Pull Requests indexed from #{@host}" %>
 
 <div class="container-sm">
   <h1 class='mb-4'>
