--- a/app/views/repositories/charts.html.erb
+++ b/app/views/repositories/charts.html.erb
@@ -1,4 +1,5 @@
 <% @meta_title = "#{@repository.full_name} issue charts | #{@host}" %>
+<% @meta_description = "Issue and pull request charts for #{@repository.full_name} on #{@host}" %>
 
 <div class="container-sm">
   <h1>
