--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -9,5 +9,13 @@
     <li class="nav-item">
       <a class="nav-link" href="/docs">API</a>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        More
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><%= link_to 'Imports', imports_path, class: 'dropdown-item' %></li>
+      </ul>
+    </li>
   </ul>
 </nav>
